# laceprotocol

./: README.md
protocol/consensus/: Cargo.toml  README.md
protocol/consensus/crates/lace-cons-types/: Cargo.toml
protocol/consensus/crates/lace-cons-types/src/: lib.rs
protocol/prediction-markets/: Cargo.toml  INTEGRATION.md  README.md  SPEC.md
protocol/prediction-markets/crates/lace-pm-amm/: Cargo.toml
protocol/prediction-markets/crates/lace-pm-amm/src/: lib.rs
protocol/prediction-markets/crates/lace-pm-compose/: Cargo.toml
protocol/prediction-markets/crates/lace-pm-compose/src/: lib.rs
protocol/prediction-markets/crates/lace-pm-governance/: Cargo.toml
protocol/prediction-markets/crates/lace-pm-governance/src/: lib.rs
protocol/prediction-markets/crates/lace-pm-governance/tests/: integration.rs
protocol/prediction-markets/crates/lace-pm-markets/: Cargo.toml
protocol/prediction-markets/crates/lace-pm-markets/src/: lib.rs
protocol/prediction-markets/crates/lace-pm-oracle/: Cargo.toml
protocol/prediction-markets/crates/lace-pm-oracle/src/: lib.rs
protocol/prediction-markets/crates/lace-pm-types/: Cargo.toml
protocol/prediction-markets/crates/lace-pm-types/src/: lib.rs
protocol/privacy/: Cargo.toml  README.md  SPEC.md
protocol/privacy/crates/lace-primitives/: Cargo.toml
protocol/privacy/crates/lace-primitives/src/: address.rs  hash.rs  keys.rs  lib.rs
protocol/reputation/: .gitignore  API.md  Cargo.toml  INTEGRATION.md  README.md  SPEC.md
protocol/reputation/crates/lace-veil-attest/: Cargo.toml
protocol/reputation/crates/lace-veil-attest/src/: lib.rs
protocol/reputation/crates/lace-veil-governance/: Cargo.toml
protocol/reputation/crates/lace-veil-governance/src/: lib.rs
protocol/reputation/crates/lace-veil-integration/: Cargo.toml
protocol/reputation/crates/lace-veil-integration/src/: lib.rs
protocol/reputation/crates/lace-veil-integration/tests/: full_lifecycle.rs
protocol/reputation/crates/lace-veil-lending/: Cargo.toml
protocol/reputation/crates/lace-veil-lending/src/: lib.rs
protocol/reputation/crates/lace-veil-proofs/: Cargo.toml
protocol/reputation/crates/lace-veil-proofs/src/: lib.rs
protocol/reputation/crates/lace-veil-score/: Cargo.toml
protocol/reputation/crates/lace-veil-score/src/: lib.rs
protocol/reputation/crates/lace-veil-stake/: Cargo.toml
protocol/reputation/crates/lace-veil-stake/src/: lib.rs
protocol/reputation/crates/lace-veil-types/: Cargo.toml
protocol/reputation/crates/lace-veil-types/src/: lib.rs
protocol/temporal-vm/: Cargo.toml  README.md  SPEC.md
protocol/temporal-vm/crates/lace-conditions/: Cargo.toml
protocol/temporal-vm/crates/lace-conditions/src/: lib.rs
protocol/temporal-vm/crates/lace-contracts/: Cargo.toml
protocol/temporal-vm/crates/lace-contracts/src/: deadman.rs  escrow.rs  lib.rs  milestone.rs  recurring.rs
protocol/temporal-vm/crates/lace-contracts/tests/: integration.rs
protocol/temporal-vm/crates/lace-disputes/: Cargo.toml
protocol/temporal-vm/crates/lace-disputes/src/: lib.rs
protocol/temporal-vm/crates/lace-time/: Cargo.toml
protocol/temporal-vm/crates/lace-time/src/: lib.rs
protocol/temporal-vm/crates/lace-vm/: Cargo.toml
protocol/temporal-vm/crates/lace-vm/src/: executor.rs  lib.rs  opcode.rs  scheduler.rs  value.rs
