[package]
name = "lace-pm-amm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LMSR automated market maker for the Lace prediction market engine."
authors.workspace = true

[dependencies]
serde = { workspace = true }
lace-pm-types = { workspace = true }
lace-pm-markets = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
