[package]
name = "lace-pm-compose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Composability surface for the Lace prediction market engine."
authors.workspace = true

[dependencies]
serde = { workspace = true }
lace-pm-types = { workspace = true }
lace-pm-markets = { workspace = true }
lace-pm-amm = { workspace = true }
lace-pm-oracle = { workspace = true }
