[package]
name = "lace-veil-attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Counterparty attestation graph with sybil resistance, decay, and dispute."
authors.workspace = true

[dependencies]
serde = { workspace = true }
lace-veil-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
