[package]
name = "lace-veil-proofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ZK score proofs (threshold, zero-defaults, calibration band, tenure) for Lace Veil Score."
authors.workspace = true

[dependencies]
serde = { workspace = true }
lace-veil-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
