[package]
name = "lace-veil-score"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Score calculation and continuous update engine for the Lace Veil Score."
authors.workspace = true

[dependencies]
serde = { workspace = true }
lace-veil-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
