[package]
name = "lace-veil-stake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reputation staking, slashing, calibration rewards, and unstake cooldown for Lace Veil Score."
authors.workspace = true

[dependencies]
serde = { workspace = true }
lace-veil-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
