[package]
name = "lace-veil-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Common identifier and value types for the Lace reputation / Veil Score system."
authors.workspace = true

[dependencies]
serde = { workspace = true }
hex = { workspace = true }
