[package]
name = "lace-conditions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lace temporal VM -- conditional release (time + external outcome composition)"

[dependencies]
lace-time.workspace = true
lace-vm.workspace = true
serde = { workspace = true, features = ["derive"] }
